[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["haraldmaida"]
license = "MIT"
edition = "2021"

description = """Solving Advent of Code Puzzles"""

repository = "https://github.com/haraldmaida/advent-of-code"
keywords = ["advent", "puzzle"]

[features]
event2015 = []
event2016 = []
event2017 = []
event2018 = []
event2019 = []
event2020 = []
event2021 = []

[lib]
bench = false

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
hashbrown = "0.11"
failure = "0.1"
fxhash = "0.2"
log = { version = "0.4", features = ["release_max_level_info"] }

[dev-dependencies]
proptest = "1"
