[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["haraldmaida"]
license = "MIT"
edition = "2021"

description = """Solving Advent of Code Puzzles"""

repository = "https://github.com/haraldmaida/advent-of-code"
keywords = ["advent", "puzzle"]

[features]
event2015 = []
event2016 = []
event2017 = []
event2018 = [ "failure", "log" ]
event2019 = [ "log" ]
event2020 = [ "hashbrown", "fxhash" ]
event2021 = [ "bitvec" ]
default = [ "bitvec" ]

[lib]
bench = false

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
bitvec = { version = "0.22", optional = true }
hashbrown = { version = "0.11", optional = true }
failure = { version = "0.1", optional = true }
fxhash = { version = "0.2", optional = true }
log = { version = "0.4", features = ["release_max_level_info"], optional = true }

[dev-dependencies]
proptest = "1"
